# Pablo-Renderer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini
.github/workflows/: cmake-multi-platform.yml
3rdPartyLybraries/Includes/glad/: glad.c  glad.h
3rdPartyLybraries/Includes/glm/: exponential.hpp  packing.hpp  vector_relational.hpp
3rdPartyLybraries/Includes/glm/detail/: func_trigonometric.inl
Assets/Model/Safari/: savana2.glb
Assets/Model/cabin/: scene.gltf
Assets/Model/fluttershy/: README.txt
Assets/Model/horse/: Scaniverse.mtl
Assets/Model/medieval_mortier/: license.txt
Assets/Model/pot/: brass_pot_01_2k.gltf
Assets/Model/skyscraper/: scene.gltf
Assets/Model/stormtrooper/: stormtrooper.mtl
Assets/Model/sunbro_helmet/: license.txt  scene.gltf
Assets/Model/sword/: scene.gltf
Assets/Model/witcher_medalion/: scene.gltf
FragmentShader/: AreaLightSourceFragment.glsl  FloorFragment.glsl  FloorGridFragment.glsl  FragmentShader.glsl  FrameBufferDebugFragment.glsl
FragmentShader/AdvancedLightning/: FinalFragment.glsl  LightSourceFragment.glsl  gBufferFragment.glsl
FragmentShader/Debug/: FrameBufferDebug2.glsl
FragmentShader/GlobalIllumination/: ReflectedColour.frag  SSR2.frag  SSRConeTracing.frag  SSRFinal.frag  SSRFragment.frag  SSRMcGuire.frag  SSRMerge.frag  SSRTest.frag
FragmentShader/PBR/: BRDFLutFragment.glsl  EnviromentToIrradianceFragment.glsl  HDRtoCubeMapFragment.glsl  PBR-FloorFragment.glsl  PBR-IBL-Textured-Fragment.glsl  PBR-Textured-Fragment.glsl  PBRFragment-IBL-Color.glsl  PBRFragment-IBL-textured-object.glsl  PBRFragment-IBL-textured.glsl  PBRFragment-Textured-Model.glsl  PBRFragment.glsl  PBRFragmentIBL_DIffuse.glsl  PBRFragmentIBL_diffuse-specular.glsl  PBRFragmentTextures.glsl  PrefilteringHDRFragment.glsl  SkyBoxFragment.glsl
FragmentShader/PBR/AreaLightFragemnt/: AreaLight.frag  AreaLightTextured-IBL.frag  AreaLightTextured.frag
FragmentShader/PixelPicking/: PixelPicking.frag
FragmentShader/Postprocessing/: BlurHorizontaly.frag  BlurVertically.frag  ChromaticAbriviationFragment.glsl  GausianPingPongBlur.frag  PixelationAndChromaticAbriviationFragment.glsl  PostProcessMerger.frag
FragmentShader/ShadowMap/: ShadowMapFragment.glsl
Includes/: Cube.h  DrawingFunctions.h  Grid.h  HelperFunctions.h  Light.h  Mesh.h  Model.h  PBRTextureLoader.h  Shader.h  VaoCreation.h  camera.h  stb_image.h
Includes/Debug/: DebugLogger.h
Includes/Debug/DisplayingFrameBuffer/: FrameBufferDebug.cpp  FrameBufferDebug.h
Includes/FrameBuffer/: FrameBuffer.cpp  FrameBuffer.h  Texture.h
Includes/Light/: Light.cpp  Light.h
Includes/PBRPipeline/: PBRPipeline.cpp  PBRPipeline.h
Includes/PBRPipline/: PBRPipeline.cpp  PBRPipeline.h
Includes/PBRPipline/FrameBufferStrategy/: FrameBufferStrategy.h
Includes/PBRPipline/PBRPipelineStrategies/: HDRToCubeMapStrategy.cpp  HDRToCubeMapStrategy.h
Includes/PostProcessing/: PostProcessing.cpp  PostProcessing.h
Includes/Renderer/: PabloRenderer.cpp  PabloRenderer.h
Includes/Renderer/Enums/: LightTypes.h  MaterialTextureType.h  RenderPassTypes.h  ShaderTypes.h  UIBuilderEnums.h
Includes/Renderer/Geometry/: Geometry.cpp  Geometry.h
Includes/Renderer/Geometry/Shapes/: CubeGeometry.cpp  CubeGeometry.h  cubeVerticies.h
Includes/Renderer/Light/: Light.cpp  Light.h
Includes/Renderer/Light/AreaLight/: AreaLight.cpp  AreaLight.h  ltc_matrix.h
Includes/Renderer/Light/DirectionLight/: DirectionalLight.cpp  DirectionalLight.h
Includes/Renderer/Light/IBLPipeline/: IBLPipeLine.cpp  IBLPipeLine.h
Includes/Renderer/Material/: Material.cpp  Material.h
Includes/Renderer/Material/BasicMaterialColor/: BasicMaterialColor.cpp  BasicMaterialColor.h
Includes/Renderer/Material/BasicMaterialTexturd/: BasicMaterialTextured.cpp  BasicMaterialTextured.h  BasicMaterialTextures.cpp  BasicMaterialTextures.h
Includes/Renderer/Material/PBRColor/: PBRColor.cpp  PBRColor.h
Includes/Renderer/Material/PBRTexture/: PBRTextured.cpp  PBRTextured.h  PBRTexturedUI.h
Includes/Renderer/Material/SkyBoxMaterial/: SkyBoxMaterial.cpp  SkyBoxMaterial.h
Includes/Renderer/RenderPass/: RenderPass.cpp  RenderPass.h
Includes/Renderer/RenderPass/GBufferPass/: GBufferPass.cpp  GBufferPass.h
Includes/Renderer/RenderPass/PixelPicking/: PixelPicking.cpp  PixelPicking.h
Includes/Renderer/RenderPass/PostProcessingPasses/: PostProcessingPass.cpp  PostProcessingPass.h
Includes/Renderer/RenderPass/RenderGraph/: RenderGraph.cpp  RenderGraph.h
Includes/Renderer/RenderPass/ScenePass/: ScenePass.cpp  ScenePass.h
Includes/Renderer/RenderPass/ShadowMapPass/: ShadowMapPass.cpp  ShadowMapPass.h
Includes/Renderer/Renderable/: Renderable.cpp  Renderable.h
Includes/Renderer/Renderable/Grid/: Grid.cpp  Grid.h
Includes/Renderer/Renderable/ModelRenderable/: ModelRenderable.cpp  ModelRenderable.h
Includes/Renderer/Renderers/: Renderer.cpp  Renderer.h
Includes/Renderer/Renderers/DepthRenderer/: DepthRenderer.cpp  DepthRenderer.h
Includes/Renderer/Renderers/OGLRenderer/: OGLRenderer.cpp  OGLRenderer.h
Includes/Renderer/Renderers/PostProcessingRenderer/: PostProcessingRenderer.cpp  PostProcessingRenderer.h
Includes/Renderer/Renderers/SingleShaderRenderer/: SingleShaderRenderer.cpp  SingleShaderRenderer.h
Includes/Renderer/SceneGraph/: Scene.cpp  Scene.h
Includes/Renderer/SceneGraph/Floor/: Floor.cpp  Floor.h
Includes/Renderer/UI/: UI.cpp  UI.h
Includes/Texture/: Texture.cpp  Texture.h
VertexShader/: AreaLightSourceVertex.glsl  DepthTestingVertex.glsl  FloorGridVertex.glsl  FloorVertex.glsl  FrameBufferDebugVertex.glsl  LutTextureDebugVertex.glsl  VertexShader.glsl
VertexShader/AdvancedLightning/: AdvancedLightningVertex.glsl  LightSourceVertex.glsl  ShadowMapVertex.glsl
VertexShader/GlobalIllumination/: SSRVertex.vert
VertexShader/PBR/: HDRtoCubeMapVertex.glsl  PBRAreaLIghtVertex.vert  PBRVertex-Simple.glsl  PBRVertex.glsl
VertexShader/PixelPickingVertex/: PixelPickingVertex.vert
VertexShader/ShadowMap/: ShadowMapVertex.glsl
source/: main.cpp  stb_image_write.cpp
(+133 files in other folders)
